--- a/dae/dae/annotation/templates/annotate_doc_pipeline_template.jinja
+++ b/dae/dae/annotation/templates/annotate_doc_pipeline_template.jinja
@@ -24,11 +24,44 @@
       h4 {
         margin-top: 0.5em;
         margin-bottom: 0.5em;
+        font-size: 24px;
+      }
+
+      .preambule-header,
+      .annotator-list-header,
+      .pipeline-header {
+        margin-top: 40px;
+        margin-bottom: 20px;
+      }
+
+      .preambule-header,
+      .annotator-list-header {
+        font-size: 30px;
+      }
+
+      .pipeline-header {
+        font-size: 36px;
+      }
+
+      table {
+        border-collapse: collapse;
+      }
+
+      th, td {
+        padding: 10px;
+      }
+
+      th {
+        font-size: 20px;
+      }
+
+      td {
+        font-size: 18px;
       }
 
       .annotator-doc {
         display: flex;
-        margin-bottom: 60px;
+        margin-bottom: 40px;
         flex-direction: row;
         border: 1px solid rgb(218,218,218);
       }
@@ -63,10 +96,7 @@
       }
       
       .attribute {
-        padding: 20px 0 20px;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
+        padding: 0 0 20px;
         border-bottom: 1px solid rgb(218,218,218);
       }
 
@@ -77,29 +107,45 @@
       .attribute-name {
         font-size: 22px;
         font-weight: 500;
-        margin: 8px;
+        padding: 10px 8px;
         word-break: break-word;
       }
 
-      .attribute-type, .attribute-internal, .resource-id {
+      .resource-id {
         font-size: 18px;
         margin: 8px;
       }
 
-      .attribute-internal {
-        font-style: italic;
+      .attribute-type {
+        font-size: 18px;
+        padding: 10px 8px;
       }
 
       .attribute-description {
         font-size: 18px;
-        width: 55%;
         margin-right: 20px;
       }
 
       .attribute-info {
-        font-size: 22px;
+        font-size: 24px;
         align-self: center;
-        width: 35%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        background-color: #f7f7f7;
+        margin-bottom: 12px;
+      }
+
+      .attribute-internal {
+        background-color: #f7efe4;
+      }
+
+      .attribute-source {
+        color: rgb(145,145,145);
+      }
+
+      .attribute-source {
+        margin: 8px;
       }
 
       .no-description {
@@ -134,9 +180,9 @@
   </head>
 
   <body>
-    <h1>Pipeline Documentation</h1>
+    <h1 class="pipeline-header">Pipeline Documentation</h1>
     {% if preambule is not none %}
-    <h2>Preambule</h2>
+    <h2 class="preambule-header">Preambule</h2>
     <table style="width: 100%">
     <tr>
       <th>Input reference genome</th>
@@ -171,22 +217,21 @@
     </table>
     {% endif %}
 
-    <h2>Annotators</h2>
+    <h2 class="annotator-list-header">Annotators</h2>
     {% for annotator_info in annotation_pipeline_info %}
     <div class="annotator-doc">
       <div class="attribute-list">
         {% for attribute_info in annotator_info.attributes %}
         <div class="attribute">
-          <div class="attribute-info">
-            <div class="attribute-name">{{attribute_info.name}}</div>
+          <div class="attribute-info {{'attribute-internal' if attribute_info.internal }}">
+            <div class="attribute-name">
+              {{attribute_info.name + ' (Internal)' if attribute_info.internal else attribute_info.name}}
+            </div>
             <div class="attribute-type">Type: {{attribute_info.type}}</div>
-            {% if attribute_info.internal %}
-            <div class="attribute-internal">Internal</div>
-            {% endif %}
           </div>
           <div class="attribute-description">
-            <div>source: {{attribute_info.source}}</div>
             {{markdown(attribute_info.documentation)}}
+            <div class="attribute-source">source: {{attribute_info.source}}</div>
           </div>
         </div>
         {% endfor %}
@@ -195,16 +240,15 @@
       <div class="annotator-line {{'sticky-line' if annotator_info.attributes|length > 1 }}">
         <div class="annotator">
           <div class="annotator-title">Annotator type: {{annotator_info.type}}</div>
-          {% for genomic_resource in annotator_info.resources %}
-          <div class="resource-id">Resource id: <a href="{{genomic_resource.get_url()}}/index.html">
-                  {{genomic_resource.get_id()}}</a></div>                            
-          {% endfor %}
         </div>
   
         {% if annotator_info.documentation %}
-        <div class="annotator-description">
-          {{ markdown(annotator_info.documentation) }}
-        </div>
+        <details>
+          <summary>Description</summary>
+          <div class="annotator-description">
+            {{ markdown(annotator_info.documentation) }}
+          </div>
+        </details>
         {% else %}
         <div class="no-description">
           No description
@@ -218,10 +262,12 @@
                   {{genomic_resource.get_id()}}</a></div>                            
           <div>type: {{genomic_resource.get_type()}}</div>
           {% if genomic_resource.get_summary() %}
-            <div>Description:</div>
+          <details>
+            <summary>Description</summary>
             <div class="markdown">
               {{ markdown(genomic_resource.get_summary()) }}
             </div>
+          </details>
           {% endif %}
         </div>
         {% endfor %}
