update annotate doc template

--- a/dae/dae/annotation/templates/annotate_doc_pipeline_template.jinja
+++ b/dae/dae/annotation/templates/annotate_doc_pipeline_template.jinja
@@ -61,7 +61,6 @@
 
       .annotator-doc {
         display: flex;
-        margin-bottom: 40px;
         flex-direction: row;
         border: 1px solid rgb(218,218,218);
       }
@@ -140,12 +139,14 @@
         background-color: #f7efe4;
       }
 
-      .attribute-source {
+      .attribute-source, .pipeline_path {
         color: rgb(145,145,145);
+        margin: 8px;
       }
 
-      .attribute-source {
-        margin: 8px;
+      .pipeline_path {
+        float: right;
+        font-size: 18px;
       }
 
       .no-description {
@@ -158,8 +159,12 @@
         padding: 8px;
       }
 
-      details, .resource, .annotator-description {
+      .resource, .annotator-description {
         padding: 10px 8px;
+      }
+
+      summary {
+        padding-top: 10px; 
       }
 
       img {
@@ -182,98 +187,103 @@
   <body>
     <h1 class="pipeline-header">Pipeline Documentation</h1>
     {% if preambule is not none %}
-    <h2 class="preambule-header">Preambule</h2>
-    <table style="width: 100%">
-    <tr>
-      <th>Input reference genome</th>
-      <td>{{preambule.input_reference_genome}}</td>
-    </tr>
-    <tr>
-      <th>Title</th>
-      <td>{{preambule.title}}</td>
-    </tr>
-    <tr>
-      <th>Summary</th>
-      <td>{{preambule.summary}}</td>
-    </tr>
-    <tr>
-      <th>Description</th>
-      <td>{{preambule.description}}</td>
-    </tr>
-    <tr>
-      <th>Authors</th>
-      <td>{{preambule.authors}}</td>
-    </tr>
-    <tr>
-      <th>Metadata</th>
-      <td>
-        <ul>
-            {%- for k, v in preambule.metadata.items() %}
-            <li>{{k}} = {{v}}</li>
-            {%- endfor %}
-        </ul>
-      </td>
-    </tr>
-    </table>
+      <h2 class="preambule-header">Preambule</h2>
+      <table style="width: 100%">
+      {% if preambule.summary %}
+        <tr>
+          <th>Summary</th>
+          <td>{{preambule.summary}}</td>
+        </tr>
+      {% endif %}
+      {% if preambule.description %}
+        <tr>
+          <th>Description</th>
+          <td>{{preambule.description}}</td>
+        </tr>
+      {% endif %}
+      {% if preambule.input_reference_genome_res.get_url() %}
+        <tr>
+          <th>Input reference genome</th>
+          <td>
+            <a href="{{preambule.input_reference_genome_res.get_url()}}">
+              {{preambule.input_reference_genome}}
+            </a>
+          </td>
+        </tr>
+      {% endif %}
+      {% if preambule.metadata.items()|length > 1 %}
+        <tr>
+          <th>Metadata</th>
+          <td>
+            <ul>
+                {%- for k, v in preambule.metadata.items() %}
+                <li>{{k}} = {{v}}</li>
+                {%- endfor %}
+            </ul>
+          </td>
+        </tr>
+      {% endif %}
+      </table>
+    {% endif %}
+
+    {% if pipeline_path is not none %}
+    <div class="pipeline_path">
+      Pipeline path: {{pipeline_path}}
+    </div>
     {% endif %}
 
     <h2 class="annotator-list-header">Annotators</h2>
     {% for annotator_info in annotation_pipeline_info %}
-    <div class="annotator-doc">
-      <div class="attribute-list">
-        {% for attribute_info in annotator_info.attributes %}
-        <div class="attribute">
-          <div class="attribute-info {{'attribute-internal' if attribute_info.internal }}">
-            <div class="attribute-name">
-              {{attribute_info.name + ' (Internal)' if attribute_info.internal else attribute_info.name}}
+      <div class="annotator-doc">
+        <div class="attribute-list">
+          {% for attribute_info in annotator_info.attributes %}
+            <div class="attribute">
+              <div class="attribute-info {{'attribute-internal' if attribute_info.internal }}">
+                <div class="attribute-name">
+                  {{attribute_info.name + ' (Internal)' if attribute_info.internal else attribute_info.name}}
+                </div>
+                <div class="attribute-type">Type: {{attribute_info.type}}</div>
+              </div>
+              <div class="attribute-description">
+                {{markdown(attribute_info.documentation)}}
+                <div class="attribute-source">source: {{attribute_info.source}}</div>
+              </div>
             </div>
-            <div class="attribute-type">Type: {{attribute_info.type}}</div>
-          </div>
-          <div class="attribute-description">
-            {{markdown(attribute_info.documentation)}}
-            <div class="attribute-source">source: {{attribute_info.source}}</div>
-          </div>
+          {% endfor %}
         </div>
-        {% endfor %}
-      </div>
 
-      <div class="annotator-line {{'sticky-line' if annotator_info.attributes|length > 1 }}">
-        <div class="annotator">
-          <div class="annotator-title">Annotator type: {{annotator_info.type}}</div>
-        </div>
-  
-        {% if annotator_info.documentation %}
-        <details>
-          <summary>Description</summary>
-          <div class="annotator-description">
-            {{ markdown(annotator_info.documentation) }}
+        <div class="annotator-line {{'sticky-line' if annotator_info.attributes|length > 1 }}">
+          <div class="annotator">
+            <div class="annotator-title">Annotator type: {{annotator_info.type}}</div>
           </div>
-        </details>
-        {% else %}
-        <div class="no-description">
-          No description
-        </div>
-        {% endif %}
-
-        {% for genomic_resource in annotator_info.resources %}
-        <div class="resource">
-          <div><b>Resource</b></div>
-          <div>id: <a href="{{genomic_resource.get_url()}}/index.html">
-                  {{genomic_resource.get_id()}}</a></div>                            
-          <div>type: {{genomic_resource.get_type()}}</div>
-          {% if genomic_resource.get_summary() %}
-          <details>
-            <summary>Description</summary>
-            <div class="markdown">
-              {{ markdown(genomic_resource.get_summary()) }}
+    
+          {% if annotator_info.documentation %}
+            <summary>Summary:</summary>
+            <div class="annotator-description">
+              {{ markdown(annotator_info.documentation) }}
             </div>
-          </details>
+          {% else %}
+            <div class="no-description">
+              No description
+            </div>
           {% endif %}
+
+          {% for genomic_resource in annotator_info.resources %}
+            <div class="resource">
+              <div><b>Resource</b></div>
+              <div>id: <a href="{{genomic_resource.get_url()}}/index.html">
+                      {{genomic_resource.get_id()}}</a></div>                            
+              <div>type: {{genomic_resource.get_type()}}</div>
+              {% if genomic_resource.get_summary() %}
+                <summary>Summary:</summary>
+                <div class="markdown">
+                  {{ markdown(genomic_resource.get_summary()) }}
+                </div>
+              {% endif %}
+            </div>
+          {% endfor %}
         </div>
-        {% endfor %}
       </div>
-  
-    </div>
     {% endfor %}
   </body>
 <html>
