fix annotate doc pipeline template preambule link

--- a/dae/dae/annotation/templates/annotate_doc_pipeline_template.jinja
+++ b/dae/dae/annotation/templates/annotate_doc_pipeline_template.jinja
@@ -205,7 +205,7 @@
         <tr>
           <th>Input reference genome</th>
           <td>
-            <a href="{{preambule.input_reference_genome_res.get_url()}}">
+            <a href="{{preambule.input_reference_genome_res.get_url() + "/index.html"}}">
               {{preambule.input_reference_genome}}
             </a>
           </td>
